@@ -132,6 +132,13 @@ Get the number of items in the control.
 \helpref{SetItemCount()}{wxvlistboxsetitemcount}
 
 
+\membersection{wxVListBox::GetItemRect}\label{wxvlistboxgetitemrect}
+
+\constfunc{wxRect}{GetItemRect}{\param{size_t }{line}}
+
+Returns the position and size of the given line, or the empty rectangle if the line is not visible.
+
+
 \membersection{wxVListBox::GetMargins}\label{wxvlistboxgetmargins}
 
 \constfunc{wxPoint}{GetMargins}{\void}
